// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button primary 1`] = `
<button
  className="sc-htpNat dPjcuE"
>
  Primary Button
</button>
`;

exports[`Storyshots Button secondary 1`] = `
<button
  className="sc-htpNat dFpKTM"
>
  Secondary Button
</button>
`;
